--- a/index.html
+++ b/index.html
@@ -1,56 +1,133 @@
-<ul class="accordion">
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 1
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 2
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 3
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                    inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
-                </p>
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                    inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
-                </p>
-            </div>
-        </div>
-    </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <div class="wrapper">
+        <main class="page">
+
+            <ul class="accordion">
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 1
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 2
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 3
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                                inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
+                            </p>
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                                inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <!-- --> 
+            <ul class="accordion">
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 1
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 2
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                        </div>
+                    </div>
+                </li>
+                <li class="accordion__item">
+                    <div class="accordion__heading">
+                        Оглавление 3
+                        <button class="accordion__button"></button>
+                    </div>
+                    <div class="accordion__body">
+                        <div class="accordion__content">
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            </p>
+                            <p> consectetur adipisicing.</p>
+                            <p> consectetur adipisicing elit. Architecto minus itaque
+                                inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                                inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+        </main>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
