--- a/index.html
+++ b/index.html
@@ -1,56 +1,76 @@
-<ul class="accordion">
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 1
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 2
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-            </div>
-        </div>
-    </li>
-    <li class="accordion__item">
-        <div class="accordion__heading">
-            Оглавление 3
-            <button class="accordion__button"></button>
-        </div>
-        <div class="accordion__body">
-            <div class="accordion__content">
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                </p>
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                    inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
-                </p>
-                <p> consectetur adipisicing.</p>
-                <p> consectetur adipisicing elit. Architecto minus itaque
-                    inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
-                    inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
-                </p>
-            </div>
-        </div>
-    </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <div class="container">
+
+        <ul class="accordion">
+            <li class="accordion__item">
+                <div class="accordion__heading">
+                    Оглавление 1
+                    <button class="accordion__button"></button>
+                </div>
+                <div class="accordion__body">
+                    <div class="accordion__content">
+                        <p> consectetur adipisicing.</p>
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="accordion__item">
+                <div class="accordion__heading">
+                    Оглавление 2
+                    <button class="accordion__button"></button>
+                </div>
+                <div class="accordion__body">
+                    <div class="accordion__content">
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                        </p>
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                        </p>
+                    </div>
+                </div>
+            </li>
+            <li class="accordion__item">
+                <div class="accordion__heading">
+                    Оглавление 3
+                    <button class="accordion__button"></button>
+                </div>
+                <div class="accordion__body">
+                    <div class="accordion__content">
+                        <p> consectetur adipisicing.</p>
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                        </p>
+                        <p> consectetur adipisicing.</p>
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
+                        </p>
+                        <p> consectetur adipisicing.</p>
+                        <p> consectetur adipisicing elit. Architecto minus itaque
+                            inventore similique repellendus laborum dicta distinctio enim voluptate quidem!
+                            inrepellendus laborum dicta distinctio enim voluptate quidem!ventore similique
+                        </p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</body>
+
+</html>
